Fixed name logo font style and size for mobile devices.

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -388,9 +388,9 @@ img.hop {
     a.name {  
         text-decoration: none;
         color: rgb(0, 0, 0);
-        font-family: 'Barriecito', cursive;
+        font-family: 'Plaster', cursive;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 18px;
         letter-spacing: 2px;
         margin-left: 60px;
     }
