--- a/main/static/style.css
+++ b/main/static/style.css
@@ -106,6 +106,7 @@ img.hop {
     div.navigation-bar-backdrop {
         background-color: rgba(255, 255, 255, 0.3);
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
     }
     
     div.nameContainer {
@@ -376,6 +377,8 @@ img.hop {
     div.navigation-bar-backdrop {
         background-color: rgba(255, 255, 255, 0.3);
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+
     }
     
     div.nameContainer {
