--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -6,70 +6,84 @@
 {% block home%}{% url 'main:index'%}{% endblock%}
 {% block detailBody%}
 <div class="row portfolio-main justify-content-center">
-
     <div class="col-12 px-md-5 px-0 " style="text-align: center;">
-    
         <p class="px-md-5 px-0">
-    
             I have managed communities over 10k on Instagram and Twitter as well as helping multiple clients enrich their social media presence by providing full audit of their profiles, growing and engaging audience and communities, copywriting, creating social media strategies, engaging and insightful content, digital marketing, managing online reputation, planing and implementing advertising strategies, retrieving analytics and providing recommendations based on date and page analytics. 
         </p>
         <p class="px-md-5 px-0">
             Here are some of my projects:
         </p>
-    
     </div>
 
-   
+   <!-- First Section start -->
     <div class="col-12 px-md-5 px-0 mt-5" style="height: fit-content;">
         <h5 class="project-link-heading">MEDICALLY SPEAKING AFRICA</h5>
         <h6>CONTENT CREATOR | EDITOR | SOCIAL MEDIA STRATEGIST AND MANAGER</h6>
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/pic5.jpg'%}" alt="" style="width: 100%; display: inline-block;">
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/pic5actual.jpg'%}" alt="" style="width: 80%; display: inline-block;">
     </div>
+
     <div class="col-12 px-md-5 px-0 mt-1" style="font-size: 0.7em;">
         Successfully launched and analyzed campaign which gained over 2 million impression on the #CheatCervicalCancer campaign on Instagram and Twitter.
     </div>
+    <!-- First section end -->
     
+    <!-- Second section start -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">SMILE WITH ME FOUNDATION</h5>
         <h6>CONTENT CREATOR | SOCIAL MEDIA STRATEGIST AND MANAGER</h6>
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/pic3v1.jpg'%}" alt="" style="width: 100%; display: inline-block;">
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/pic3v2.jpg'%}" alt="" style="width: 100%; display: inline-block;">
     </div>
+
     <div class="col-12 px-md-5 px-0 mt-1" style="font-size: 0.7em;">
         Proactive and interactive social media engagement and reputation management and increased Instagram followers by 30%.
     </div>
-    
+    <!-- Second section end -->
+
+    <!-- Third section start -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">HOUSE OF PANACEA</h5>
         <h6>CREATIVE DIRECTOR | CURATOR</h6>
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/hop1.jpg'%}" alt="" style="width: 100%; display: inline-block;">
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images hop" src="{% static 'images/hop2.jpg'%}" alt="" style=" display: inline-block;">
     </div>
+
     <div class="col-12 px-md-5 px-0 mt-1" style="font-size: 0.7em;">
         Drove organic media traffic by reaching over 17,193% more accounts on house of panacea with an Instagram reels reach, clicks and plays of over 10,000 on a single account over 3 months. 
     </div>
+    <!-- Third section end -->
     
+    <!-- Forth section start -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">LoseItWithJustJoy</h5>
         <h6>SOCIAL MEDIA STRATEGIST AND MANAGER | CONTENT CREATOR</h6>
     </div>
+
     <div class="col-12 col-sm-12 col-lg-6 mt-3 mt-sm-3 px-md-5 px-0">
         <img class="ms-auto portfolio-images" src="{% static 'images/pic6.jpg'%}" alt="" style="width: 100%; display: inline-block;">
     </div>
-
+    <!-- Forth section end -->
+    
+    <!-- Fifth section start -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">DR ZOBO</h5>
         <h6>CONTENT CREATOR | EDITOR | INTERN</h6>
@@ -77,11 +91,16 @@
     <div class="col-12 px-md-5 px-0 mt-1" style="font-size: 0.7em;">
         Aided in creating social media strategy and content for @Drzobo which has a following of over 20k followers.
     </div>
+    <!-- Fifth section end -->
 
+    <!-- Sixth section start -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">BLUUMHEALTH</h5>
         <h6>WEBSITE LAUNCH CAMPAIGN</h6>
     </div>
+    <!-- Sixth section end -->
+
+    <!-- Start of blog posts section -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">BLOG POSTS</h5>
         <h6>Medically Speaking Africa</h6>
@@ -92,6 +111,9 @@
             <li><a class="blog-links" href="https://medicallyspeaking.com.ng/2021/03/16/polycystic-ovarian-syndrome/" target="blank" style="">Polycystic Ovarian Syndrome</a></li>
         </ul>
     </div>
+    <!-- End of blog posts section -->
+
+    <!-- Start of contact section -->
     <div class="col-12 my-footer  mt-5 pb-5 ps-5" style="" id="contact">
         <h4 class="mb-5" style="color: #000;">Contact</h4>
         <div class="row justify-content-sm-start">
@@ -109,6 +131,7 @@
             </a>
         </div>
     </div>
+    <!-- End of contact section -->
 </div>
 
 {% endblock%}
