--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,12 +4,9 @@
 
 {% block body%}
     <div class="my-container">
-        <!-- <div id="opaque-bkg"></div> -->
         <div class="layerBKG1"></div>
 
-        <div class="profileImg">
-
-        </div>
+        <div class="profileImg"></div>
         
         <div class="mainGreet">
             <h1 class="greeting">
@@ -23,52 +20,65 @@
                     VIEW RESUME
                 </div>
             </a>
-        </div>
-       
-        
-        
+        </div>     
     </div>
+
+    <!-- Start of about me section -->
     <div class="about " id="about-me">
         <p><h3>Hey!</h3><br>I'm Dr Joy Aifuobhokhan. I am a medical Doctor and curator of House of Panacea with over 3 years experience in content creation, social media management/strategy, community management and blogging in the health and fitness industry.</p>
     </div>
+    <!-- End of about me -->
+
+    <!-- Start of portfolio and contact section -->
     <div class="portfolio-contact-container container-fluid">
         <div class="skills container-fluid" id="portfolio">
             <h3 class="border- py-3" style="text-align: center; font-weight:700;">Portfolio</h3>
+
+            <!-- Skills and services -->
             <h4 class="py-2 ms-5" style="font-weight:700;">My Skillset and Services </h4>
+
             <div class="container-fluid" style="font-size: 14px; transition: 1s;">
                 <div class="row mx-5 justify-content-center">
                     <div class="col-md-3 col-sm-4 col-12 mt-5 justify-content-end">
                         <h6 style="text-align: center;">CONTENT CREATION</h6>
                         <i class="fab fa-creative-commons-sampling mt-2" style="font-size:85px; position:relative; left: 50%; transform: translate(-50%, 0%);"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">SOCIAL MEDIA MANAGEMENT AND STRATEGY</h6>
-                        <i class="fas fa-tasks mt-2 skill-icon skill-icon" style="font-size:70px; position:relative; left: 50%; transform: translate(-50%, 0%);"></i>
+                        <i class="fas fa-tasks mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">COPYWRITING</h6>
                         <i class="fas fa-laptop mt-2 skill-icon" style=""></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">CONTENT CALENDER PLANNING</h6>
                         <i class="fas fa-calendar-alt mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5  ">
                         <h6 style="text-align: center;">PROFILE AUDIT AND OPTIMIZATION</h6>
                         <i class="fas fa-chart-line mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">BASIC GRAPHIC CREATION (CANVA)</h6>
                         <i class="fas fa-pen-nib mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">COMMUNITY ENGAGEMENT</h6>
                         <i class="fas fa-users mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">CREATION OF MARKETING STRATEGIES</h6>
                         <i class="fas fa-poll mt-2 skill-icon"></i>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-12 mt-5 ">
                         <h6 style="text-align: center;">SOCIAL MEDIA ADVERTISING</h6>
                         <i class="fas fa-bullhorn mt-2 skill-icon"></i>
@@ -76,6 +86,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Projects -->
         <div class="projects container-fluid mt-5">
             <h4 class="py-2 ms-5" style="font-weight:700;">My Projects </h4>
             <div class="row justify-content-around" style="text-align: center;">
@@ -114,6 +126,7 @@
                 <li>Aided in organic social media growth through Content planning for 3-5 days a week</li>
             </ul> -->
         </div>
+        <!-- Contact section -->
         <div class="container-fluid my-footer  my-5 ps-5" id="contact">
             <h4 class="mb-5" style="color: #000;">Contact</h4>
             <div class="row justify-content-sm-start">
@@ -132,6 +145,8 @@
             </div>
             
         </div>
+
+
     </div>
     
 
