--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -91,6 +91,10 @@
         <div class="projects container-fluid mt-5">
             <h4 class="py-2 ms-5" style="font-weight:700;">My Projects </h4>
             <div class="row justify-content-around" style="text-align: center;">
+                <a class="project-link col-8 mt-sm-3 mt-5">
+                    <h5 class="project-link-heading">BRANDBOXX</h5>
+                    <h6>COPYWRITER | CONTENT CURATOR | WRITER</h6>
+                </a>
                 <a href="https://instagram.com/drzobo?utm_medium=copy_link" class="project-link col-8 mt-sm-3 mt-5" target="blank">
                         <h5 class="project-link-heading">DR ZOBO</h5>
                         <h6>CONTENT CREATOR | EDITOR | INTERN</h6>
@@ -116,6 +120,7 @@
                         <h5 class="project-link-heading">BLUUMHEALTH</h5>
                         <h6>WEBSITE LAUNCH CAMPAIGN</h6>
                 </a>
+                
                 <a href="{% url 'main:projects' %}" class="project-link-details col-8 mt-3 justify-content-end">
                     <h5 class="project-link-heading">MORE DETAILS</h5>
                 </a>
