--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -100,6 +100,33 @@
     </div>
     <!-- Sixth section end -->
 
+    <!-- Seventh section start -->
+    <div class="col-12 px-md-5 px-0 mt-5">
+        <h5 class="project-link-heading">BRANDBOXX</h5>
+        <h6>COPYWRITER | CONTENT CURATOR | WRITER</h6>
+    </div>
+    <div class="col-12 px-md-5 px-0 mt-1" style="font-size: 0.7em;">
+        <h6>Here are some of the projects I've worked on with Brandboxx.</h6>
+        <ul style="list-style-type:square;">
+            <li>
+                WEBSITE COPY - STAR GOLD PROPERTY
+            </li>    
+            <li>
+                WEBSITE COPY- ZAT PROPERTY
+            </li>
+            <li>
+                WEBSITE COPY- ZAT STAFFING AGENCY
+            </li>
+            <li>
+                AD COPY- BRANDBOXX SOCIAL MEDIA PLATFORMS
+            </li>
+            <li>
+                SCRIPTED COLD MESSEAGES- BRANDBOX</li>
+            </li>
+        </ul>
+    </div>
+    <!-- Seventh section end -->
+
     <!-- Start of blog posts section -->
     <div class="col-12 px-md-5 px-0 mt-5">
         <h5 class="project-link-heading">BLOG POSTS</h5>
