Changed link for houseOfPanacea IG

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -7,7 +7,7 @@
         <div class="layerBKG1"></div>
 
         <div class="profileImg"></div>
-        
+
         <div class="mainGreet">
             <h1 class="greeting">
                 JOY AIFUOBHOKHAN
@@ -20,7 +20,7 @@
                     VIEW RESUME
                 </div>
             </a>
-        </div>     
+        </div>
     </div>
 
     <!-- Start of about me section -->
@@ -98,7 +98,7 @@
                 <a href="https://instagram.com/drzobo?utm_medium=copy_link" class="project-link col-8 mt-sm-3 mt-5" target="blank">
                         <h5 class="project-link-heading">DR ZOBO</h5>
                         <h6>CONTENT CREATOR | EDITOR | INTERN</h6>
-                    
+
                 </a>
                 <a href="https://medicallyspeaking.com.ng/about-us/" class="project-link col-8 mt-sm-3 mt-5" target="blank">
                         <h5 class="project-link-heading">MEDICALLY SPEAKING AFRICA</h5>
@@ -108,7 +108,7 @@
                         <h5 class="project-link-heading">SMILE WITH ME FOUNDATION</h5>
                         <h6>CONTENT CREATOR | SOCIAL MEDIA STRATEGIST AND MANAGER</h6>
                 </a>
-                <a href="https://instagram.com/houseofpanacea?utm_medium=copy_link" class="project-link col-8 mt-sm-3 mt-5" target="blank">
+                <a href="https://www.instagram.com/drpanacea_/" class="project-link col-8 mt-sm-3 mt-5" target="blank">
                         <h5 class="project-link-heading">HOUSE OF PANACEA</h5>
                         <h6>CREATIVE DIRECTOR | CURATOR</h6>
                 </a>
@@ -120,7 +120,7 @@
                         <h5 class="project-link-heading">BLUUMHEALTH</h5>
                         <h6>WEBSITE LAUNCH CAMPAIGN</h6>
                 </a>
-                
+
                 <a href="{% url 'main:projects' %}" class="project-link-details col-8 mt-3 justify-content-end">
                     <h5 class="project-link-heading">MORE DETAILS</h5>
                 </a>
@@ -148,11 +148,11 @@
                     <i class="far fa-envelope fa-2x"></i>
                 </a>
             </div>
-            
+
         </div>
 
 
     </div>
-    
+
 
 {% endblock%}
